apps/whoami/whoami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: gitops-demo
  labels: {app: whoami}
spec:
  replicas: 2
  selector:
    matchLabels: {app: whoami}
  template:
    metadata:
      labels: {app: whoami}
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.10.3
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet: {path: /, port: 80}
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: gitops-demo
spec:
  type: LoadBalancer
  selector: {app: whoami}
  ports:
  - port: 80
    targetPort: 80
